Fix overflow on container

--- a/app.css
+++ b/app.css
@@ -149,7 +149,8 @@ ul {
 }
 
 .feature-img {
-  width: 400px;
+  max-width: 400px;
+  width: 100%;
 }
 
 /* ------- CTA SECTION ------- */
